--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,12 @@ node_modules/
 dist/
 web-build/
 expo-env.d.ts
-#envioronment
+# Ignore environment files
 .env
+.env.local
+.env.development
+.env.production
+.env.test
 # Native
 *.orig.*
 *.jks
